--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "formik": "^2.4.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "native-base": "^3.4.28",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-svg": "^12.1.1",
@@ -26,7 +28,8 @@
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
